welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:13: error: illegal character '\u0323'
    if(day==0 ?|| day==6){
              ^alarmClock:-6: error: Missing closing brace `}' assumed here
try {
^alarmClock:1: error: expected class or object definition
def alarmClock(day:Int, vacation:Boolean): String = {
^alarmClock:13: error: illegal character '\u0323'
    if(day==0 ?|| day==6){
              ^